gcc/testsuite/rust/rustc/ui/imports/issue-37887.rs
fn main() {
    extern crate test; // { dg-error ".E0658." "" { target *-*-* } }
    use test::*; // { dg-error ".E0432." "" { target *-*-* } }
}

